Fixed gap metrics; bad height

--- a/scroll-kit.css
+++ b/scroll-kit.css
@@ -27,9 +27,15 @@
   top: -1;
   left: 0;
   width: 100%;
-  height: 1px;
   position: fixed;
+}
+
+#scroll-kit-info .gap:before {
   border-bottom: 1px dotted red;
+  position: absolute;
+  content: ' ';
+  width: 100%;
+  top: -1px;
 }
 
 #scroll-kit-info label { line-height: 20px; }
